[package]
name = "minecraft-server-wrapper"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple wrapper for running a Minecraft bedrock server and backupping it"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
