[package]
name = "minecraft-server-wrapper"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A simple wrapper for running a Minecraft bedrock server and backupping it"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
clap = { version = "4.5.4", features = ["derive"] }
futures = { version = "0.3.30", default-features = false, features = ["alloc"] }
humantime = "2.1.0"
regex = "1.10.4"
tokio = { version = "1.37.0", features = [
    "macros",
    "process",
    "rt",
    "io-std",
    "io-util",
    "fs",
    "time",
    "sync",
] }
tokio-stream = { version = "0.1.15", default-features = false, features = [
    "fs",
] }

[profile.release]
strip = true
lto = true
codegen-units = 1
